Ready for pull request, I think

--- a/task N_13/styles.less
+++ b/task N_13/styles.less
@@ -63,19 +63,10 @@
     display: flex;
 }
 
-.infoAboutDrinks_delete {
-    display: none;
-    flex-direction: column;
-    row-gap: 20px;
-}
-
-.form__infoAboutDrinks_delete {
-    border: 1px solid black;
-    box-shadow: 0 0 10px grey;
-    height: auto;
-    width: 40vw;
-}
-
 .activeDeleteDrink {
+    display: flex;
+}
+
+.activeShow {
     display: flex;
 }
